# claude-nextjs-starterkit

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
backend/: main.py  pyproject.toml
backend/agents/: orchestrator.py  rag_agent.py  simulator_agent.py  tracer_agent.py
backend/graph/: neo4j_client.py  ontology_loader.py
backend/models/: request_models.py  response_models.py
backend/tools/: db_tools.py  git_tools.py  graph_tools.py  simulation_tools.py  wiki_tools.py
backend/vector/: chroma_client.py  wiki_indexer.py
src/app/api/agent/run/: route.ts
src/app/api/chat/: route.ts
src/components/agent/: ScenarioPanel.tsx
wiki_data/results/: S2-result-2026-03-29T11-25-43.md
